variables.Variables.scala.error
Compilation error:
Variables:7: error: value unary_! is not a member of Int
while (!stepAmount==true){
       ^