variables.Variables.scala.code
var stepAmount:Int=0
while (!isOverBaggle==true){
  forward();
  stepAmount=stepAmount+1
}
pickupBaggle();
while (!stepAmount==true){
  backward();
  stepAmount=stepAmount-1
}